Fri Aug 01 19:09:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimTabBar.cpp:
	  - The protocol icon for the account on each conversation is
	    now displayed on the tab.

Fri Aug 01 18:19:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - The Depends line was being written to stdout, and not to the
	    control file. Fixed.

Fri Aug 01 15:57:12 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBListWindow.cpp:
	  - Opening an IM window from the buddy list now raises the new tab
	    in the conversation window.

Fri Aug 01 15:50:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimTabBar.cpp:
	* src/QGaimTabBar.h:
	* src/QGaimTabWidget.cpp:
	* src/QGaimTabWidget.h:
	  - Added typing notification (incoming only).

Fri Aug 01 13:25:00 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkstuff.conf:
	  - Changed the version to 0.1-cvsdate.

Fri Aug 01 13:23:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	* src/QGaimTabBar.cpp:
	* src/QGaimTabBar.h:
	* src/QGaimTabWidget.cpp:
	* src/QGaimTabWidget.h:
	* gaim.pro:
	  - Added a subclassed QTabBar and QTabWidget, which will be used
	    for some things such as typing notification shortly.

Thu Jul 31 16:57:07 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	* src/QGaimConvWindow.h:
	  - The text entry field should now be auto-focused, though it
	    appears it doesn't always auto-focus under some cases, which
	    I have not yet narrowed down. For now, it works mostly.

Thu Jul 31 16:46:58 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Clicking the Conversations button should no longer be able to
	    segfault.

Thu Jul 31 13:30:26 PDT 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh: