@@ -1,3 +1,11 @@
+Fri Aug 01 20:00:20 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	* src/QGaimConvWindow.h:
+	* src/QGaimMultiLineEdit.cpp:
+	* src/QGaimMultiLineEdit.h:
+	  - Added history support to the input box.
+
 Fri Aug 01 19:09:17 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
